# Regression

./: .gitmodules  CMakeLists.txt
include/: MainWindow.hpp  PlotWidget.hpp
include/ui/: MainWindow.ui  PlotWidget.ui
resources/: test.CSV
src/: MainWindow.cpp  PlotWidget.cpp  main.cpp
